# VDesk

./: .gitignore  Cargo.toml  NuGet.config  README.md  VDesk.sln  sample.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dotnet-CI.yml  dotnet-desktop.yml  release.yml
VDesk/: Program.cs  VDesk.csproj
VDesk.Core/: IVirtualDesktopProvider.cs  LoggerExtensions.cs  OS.cs  Ole32.cs  ServiceCollectionServiceExtensions.cs  VDesk.Core.csproj
VDesk.Core/Errors/: VdeskError.cs
VDesk.Core/Interop/: ComBaseObject.cs  VirtualDesktopProvider.cs
VDesk.Generator/: GeneratedVirtualDesktopProviderAttribute.cs  VirtualDesktopProviderGenerator.cs
VDesk/Commands/: CreateCommand.cs  MoveCommand.cs  RunCommand.cs  SetNameCommand.cs  SwitchCommand.cs  VdeskCommand.cs  VdeskCommandBase.cs
VDesk/Errors/: VdeskError.cs
VDesk/Interop/: CLSID.cs  IVirtualDesktopProvider.cs  PInvoke.cs
VDesk/Properties/: launchSettings.json
VDesk/Services/: ProcessService.cs  WindowService.cs
VDesk/Utils/: HalfSplit.cs  ServiceCollectionServiceExtensions.cs
VDeskTests/: VDeskTests.csproj
VDeskTests/Commands/: CreateCommandTest.cs
src/: main.rs
src/VDesk/: CommandLineInfo.cs  Parser.cs  Program.cs  VDesk.csproj
src/VDesk.Generator/: VDesk.Generator.csproj  VirtualDesktopProviderGenerator.cs
src/commands/: common.rs  create.rs  get_name.rs  get_names.rs  mod.rs  move_window.rs  run.rs  set_name.rs  switch.rs  total.rs
src/utils/: mod.rs  window_utils.rs
test/TestScripts/: workingDirectory.bat
test/VDeskTests/: TestingContext.cs  Usings.cs  VDeskTests.csproj
(+101 files in other folders)
